# patcher

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README  activity.cpp  activity.h  alarm.cpp  controller.h  error.h  fantom.h  generate_midi_notes.pl  loop-patcher.sh  midi.cpp  midi.h  monofilter.h  networkif.cpp  p  package.sh  patcher.cpp  patcher.h  plint.pl  screen.cpp  screen.h  stamp.sh  timestamp.cpp  timestamp.h  tkclient.tcl  toggler.cpp  toggler.h  trackdef.cpp  trackdef.h  tracks.xml  tracks.xsd  transposer.h  xml.cpp  xml.h
src/: activity.cpp  activity.h  admin.cpp  alarm.cpp  alarm.h  controller.cpp  controller.h  cursesclient.cpp  dump.cpp  dump.h  error.h  fantom.cpp  fantom.h  fantomdef.cpp  fantomdef.h  fantomdriver.cpp  fantomdriver.h  fantomscroller.cpp  fantomscroller.h  fcb1010.h  midi.cpp  midi.h  midi_note.cpp  midi_note.h  mididef.cpp  mididef.h  mididriver.cpp  mididriver.h  monofilter.cpp  monofilter.h  networkif.cpp  networkif.h  patcher.cpp  patcher.h  patchercore.cpp  patchercore.h  persistent.cpp  persistent.h  queue.cpp  queue.h  (+21 more)
